--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <h1>Создание сайтов</h1>
                     <p>А вам нужен красивый и приносящий заявки сайт?</p>
                 </div>
-                <div class="about_photo">
+                <div data-da=".about_text, 900, 2" class="about_photo">
                     <img class="about_photo1" src="./img/Главная картинка 1.png" alt="">
                 </div>
             </div>
@@ -65,8 +65,7 @@
     <section>
 
         <div class="content1">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex tempore, illo, distinctio suscipit natus
-            aperiam atque ab non at, obcaecati laborum ut libero rem perspiciatis. Non mollitia nulla maiores accusamus!
+
         </div>
         <div class="content2">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla unde, libero corporis dolor animi eum odio
@@ -76,8 +75,8 @@
 
     </section>
 
-    <h1></h1>
 
+    <script src="./js/dynamicAdapt.js"></script>
 </body>
 
 </html>
