--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="/js/javascript.js">
+
 
 
 </head>
@@ -45,8 +45,8 @@
                     <h1>Создание сайтов</h1>
                     <p>А вам нужен красивый и приносящий заявки сайт?</p>
                 </div>
-                <div data-da=".about_text, 900, 2" class="about_photo">
-                    <img class="about_photo1" src="./img/Главная картинка 1.png" alt="">
+                <div class="about_photo">
+                    <img data-da=".about_text, 900, 2" class="about_photo1" src="./img/Главная картинка 1.png" alt="">
                 </div>
             </div>
         </div>
