--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
     <title>Landing_Nik</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap" rel="stylesheet">
@@ -44,15 +44,16 @@
                 <div class="about_text">
                     <h1>Создание сайтов</h1>
                     <p>А вам нужен красивый и приносящий заявки сайт?</p>
+                    <a class="btn" href="">Хочу сайт</a>
                 </div>
                 <div class="about_photo">
-                    <img data-da=".about_text, 900, 2" class="about_photo1" src="./img/Главная картинка 1.png" alt="">
+                    <img data-da=".about_text, 900, 3" class="about_photo1" src="./img/Главная картинка 1.png" alt="">
                 </div>
             </div>
         </div>
     </main>
 
-
+    <!--
     <div class="banner">
         <div class="wrapper">
             <h1 class="title">Создание сайтов</h1>
@@ -74,7 +75,83 @@
         </div>
 
     </section>
+-->
 
+    <div class="about">
+        <h2>ОБО МНЕ</h2>
+        <h3>Здравствуйте!<br><br><br>
+
+            Меня зовут Никита, я профессиональный разработчик сайтов на платформе Tilda.
+            Я завершил уже более 30 проектов, и сделал несколько рабочих интернет магазинов, которые приносят продажи
+            своим владельцам.<br><br>
+
+            Если вам нужен красивый и функциональный сайт, то вы обратились по адресу!
+        </h3>
+    </div>
+
+    <div class="container_main">
+        <div class="container__price_h1">
+            <div class="container__price">
+                <p class="price1">ВИДЫ САЙТОВ<br>
+                    И ЦЕНЫ </p>
+            </div>
+            <div class="services">
+                <span>LANDING PAGE</span>
+                <span>САЙТ ВИЗИТКА</span>
+                <span>ИНТЕРНЕТ МАГАЗИН</span>
+                <span>ИНДИВИДУАЛЬНЫЙ ПРОЕКТ</span>
+                <button class="btn_project">ОБСУДИТЬ ПРОЕКТ</button>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="block">
+        <div class="block1">
+            <div class="portfolio_header">
+                <h1>МОИ РАБОТЫ</h1>
+            </div>
+
+            <div class="block2">
+
+                <div class="portfolio_photo">
+                    <img class="portfolio_photo1" src="./img/Kartina.png" alt="">
+                </div>
+                <div class="text_photo">
+                    <h2>САЙТ ДЛЯ ХУДОЖНИЦЫ</h2>
+                    <h4>
+                        <li>Работа над сайтом заняла 30 часов</li>
+                        <li>Вдохновляла работа с настоящим художником</li>
+                        <li>Дизайн выполнен на Zero block</li>
+                    </h4>
+                    <a class="btn1" href="http://ny-design.tilda.ws/nellimarkina">Открыть сайт</a>
+                </div>
+
+            </div>
+
+            <div class="block2">
+
+
+                <div class="text_photo">
+                    <h2>Сайт Английская школа</h2>
+                    <h4>
+                        <li>Сайт для онлайн школы</li>
+                        <li>Выполнен на стандартных блоках</li>
+                        <li>Разработка заняла 17 часов</li>
+                    </h4>
+                    <a class="btn1" href="">Открыть сайт</a>
+                </div>
+                <div class="portfolio_photo">
+                    <img src="./img/EnglishSchool.png" alt="">
+                </div>
+
+
+            </div>
+
+
+
+        </div>
+    </div>
 
     <script src="./js/dynamicAdapt.js"></script>
 </body>
